style products list

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <link rel="stylesheet" href="css/main.css">
 
@@ -16,12 +17,12 @@
         <!-- Task 1 : Make the red color spread across the header. Make the full header RED.
             You can move your css to an external file as css or scss.
         -->
-        <div data-role="header" data-position="fixed">
+        <div data-role="none" data-position="fixed" class="header">
             <h1>Super Burger</h1>
         </div>
 
-        <div data-role="main" class="ui-content">
-            <ul data-role="listview" data-split-icon="plus" data-split-theme="a" data-inset="true" id="all-products">
+        <div data-role="main" class="ui-content wrapper">
+            <ul data-role="none" class="products-list" data-split-icon="plus" data-split-theme="a" data-inset="true" id="all-products">
                 <!-- All products are added here -->
             </ul>
             <div data-role="collapsible" id="selected-products-div">
